--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -14,6 +14,7 @@ packageExtensions:
       eslint-plugin-import: "*"
       eslint-plugin-react: "*"
       eslint-plugin-react-hooks: "*"
+      "@popperjs/core": "*"
   react-scripts@*:
     peerDependencies:
       "@babel/plugin-syntax-flow": "*"
