Put in popover for terms and conditions

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,7 +52,8 @@
       {
         "extensions": [
           ".tsx",
-          ".jsx"
+          ".jsx",
+          ".js"
         ]
       }
     ],
