--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-testing-library": "^5.9.1",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
+    "msw": "^0.49.2",
     "prettier": "^2.8.1"
   },
   "packageManager": "yarn@3.3.0"
