--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -48,6 +49,11 @@
     "lint-staged": "^13.1.0",
     "msw": "^0.49.2",
     "prettier": "^2.8.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/axios.js"
+    }
   },
   "packageManager": "yarn@3.3.0"
 }
